# pyfarm-water

./: README.md  pyproject.toml
src/pyfarm/water/: __init__.py  behavior.py  calculator.py  models.py
tests/: test_water.py
