[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-water"
version = "0.1.0"
description = "Source water treatment and quality management for pyfarm"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyfarm-core>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
